# MovieLens-stats

./: README.md  pyproject.toml  results.json
basic_movie_stats/: calculate_stats.py
tests/: test_calculate_stats.py
