[tool.poetry]
name = "basic-movie-stats"
version = "0.1.0"
description = ""
authors = ["Mariyan Stoyanov <m.stoyanov@bulteh.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
